multi-frontend-backend-cloud/kubernetes-aws-s3-kops/backend/java-family-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: java-family-service
spec:
  type: ClusterIP
  selector:
    app: java-family-app
  ports:
    - port: 80
      targetPort: 80
