multi-frontend-backend-cloud/kubernetes-aws-s3-kops/backend/java-greeting-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: java-greeting-service
spec:
  type: ClusterIP
#  type: NodePort
  selector:
    app: java-greeting-app
  ports:
    - port: 80
      targetPort: 80
