multi-frontend-backend-cloud/kubernetes-aws-s3-kops/backend/nodejs-description-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nodejs-description-service
spec:
  type: ClusterIP
  selector:
    app: nodejs-description-app
  ports:
    - port: 80
      targetPort: 80
