multi-frontend-backend-cloud/kubernetes-aws-s3-kops/backend/backend-ingress-api.yaml
#apiVersion: networking.k8s.io/v1beta1
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: backend-ingress-api
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
    - host: "architectso.com"
      http:
        paths:
          - path: /api/(.*)
            backend:
              serviceName: java-greeting-service
              servicePort: 80
